[PLAT-13148] Support bundle core collection was skipped if there is a core present with larger size
Summary: Changed core file size comparison from using int to long.

Test Plan:
Manually tested.
Run UTs.
Run itests.

Reviewers: dkumar

Reviewed By: dkumar

Subscribers: yugaware

Differential Revision: https://phorge.dev.yugabyte.com/D33198